[+] Премиум [+] BILLING [=] Фиксы

--- a/app/src/main/res/drawable/ic_drawing.xml
+++ b/app/src/main/res/drawable/ic_drawing.xml
@@ -1,6 +1,10 @@
-<vector android:height="@dimen/icon_setting" android:viewportHeight="512.006"
-    android:viewportWidth="512.006" android:width="@dimen/icon_setting" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@drawable/icon_color" android:pathData="m166.911,248.208c22.143,0 40.157,-18.015 40.157,-40.158s-18.015,-40.158 -40.157,-40.158c-22.144,0 -40.158,18.015 -40.158,40.158s18.014,40.158 40.158,40.158zM166.911,182.892c13.872,0 25.157,11.286 25.157,25.158s-11.285,25.158 -25.157,25.158 -25.158,-11.286 -25.158,-25.158 11.286,-25.158 25.158,-25.158z"/>
+<vector android:height="@dimen/icon_setting"
+    android:viewportHeight="512.006"
+    android:viewportWidth="512.006"
+    android:width="@dimen/icon_setting"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@drawable/icon_color"
+        android:pathData="m166.911,248.208c22.143,0 40.157,-18.015 40.157,-40.158s-18.015,-40.158 -40.157,-40.158c-22.144,0 -40.158,18.015 -40.158,40.158s18.014,40.158 40.158,40.158zM166.911,182.892c13.872,0 25.157,11.286 25.157,25.158s-11.285,25.158 -25.157,25.158 -25.158,-11.286 -25.158,-25.158 11.286,-25.158 25.158,-25.158z"/>
     <path android:fillColor="@drawable/icon_color" android:pathData="m255.327,206.177c21.604,0 39.182,-17.577 39.182,-39.182s-17.577,-39.182 -39.182,-39.182 -39.183,17.577 -39.183,39.182 17.578,39.182 39.183,39.182zM255.327,142.813c13.334,0 24.182,10.848 24.182,24.182s-10.848,24.182 -24.182,24.182 -24.183,-10.848 -24.183,-24.182 10.849,-24.182 24.183,-24.182z"/>
     <path android:fillColor="@drawable/icon_color" android:pathData="m183.032,438.48c21.604,0 39.182,-17.577 39.182,-39.182s-17.577,-39.182 -39.182,-39.182 -39.183,17.577 -39.183,39.182 17.578,39.182 39.183,39.182zM183.032,375.117c13.334,0 24.182,10.848 24.182,24.182s-10.848,24.182 -24.182,24.182 -24.183,-10.848 -24.183,-24.182 10.849,-24.182 24.183,-24.182z"/>
     <path android:fillColor="@drawable/icon_color" android:pathData="m275.301,468.088c21.604,0 39.182,-17.577 39.182,-39.182s-17.577,-39.182 -39.182,-39.182 -39.183,17.577 -39.183,39.182 17.577,39.182 39.183,39.182zM275.301,404.724c13.334,0 24.182,10.848 24.182,24.182s-10.848,24.182 -24.182,24.182 -24.183,-10.848 -24.183,-24.182 10.849,-24.182 24.183,-24.182z"/>
