--- a/app/src/main/res/layout/app_info.xml
+++ b/app/src/main/res/layout/app_info.xml
@@ -30,40 +30,50 @@
                     android:background="@drawable/card_white"
                     android:padding="9dp"
                     android:src="@drawable/ic_book"
-                    android:layout_centerInParent="true"/>
-
+                    android:layout_centerInParent="true"
+                    android:id="@+id/logo"/>
             </RelativeLayout>
+
+
+
+            <TextView
+
+                android:layout_marginLeft="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Сайт университета: https://www.asu.ru/"
+                android:textSize="@dimen/text_big"
+                android:textColor="?android:attr/textColorPrimary"/>
+
 
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:background="?android:attr/listDivider"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"/>
-
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="16dp"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Поддержать автора"
-                android:textSize="16sp"
-                android:layout_marginLeft="46dp"
-                android:layout_marginTop="46dp"
-                android:id="@+id/donate"
-                android:textColor="?android:attr/textColorPrimary"/>
+                android:textSize="@dimen/text_big"
+                android:textColor="?android:attr/textColorPrimary"
+                android:text="Лицензии"
+                android:id="@+id/license"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"/>
 
-            <Button
-                android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="logout"
-                android:layout_marginLeft="46dp"
-                android:layout_marginTop="90dp"
-                android:textColor="@color/colorPrimary"
-                android:id="@+id/logout"/>
+                android:textSize="@dimen/text_big"
+                android:textColor="?android:attr/textColorPrimary"
+                android:text="Профиль (тестовая версия)"
+                android:id="@+id/profile_test"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"/>
 
-
-            <include layout="@layout/fragment_timetable_custom"
-                android:id="@+id/tools"/>
 
 
         </LinearLayout>
