--- a/app/src/main/res/layout/fragment_group_num.xml
+++ b/app/src/main/res/layout/fragment_group_num.xml
@@ -5,40 +5,62 @@
     android:layout_height="wrap_content"
     android:id="@+id/group_list">
 
-
-
-    <Button
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="000"
         android:layout_marginTop="15dp"
-        android:textColor="?android:attr/textColorPrimary"
-        android:textSize="25sp"
-        android:id="@+id/group1"
-        android:background="@android:color/transparent"/>
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:background="@drawable/group_bg">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:text="000"
+            android:textColor="?attr/colorAccent"
+            android:textSize="@dimen/text_bigest"
+            android:id="@+id/group1"
+            android:background="@android:color/transparent"/>
+    </RelativeLayout>
 
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:background="@drawable/group_bg">
     <Button
         android:id="@+id/group2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="15dp"
+        android:layout_centerHorizontal="true"
         android:background="@android:color/transparent"
         android:text="000"
-        android:textColor="?android:attr/textColorPrimary"
-        android:textSize="25sp" />
+        android:textColor="?attr/colorAccent"
+        android:textSize="@dimen/text_bigest" />
+    </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:background="@drawable/group_bg">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="000"
-        android:layout_weight="1"
-        android:layout_marginTop="15dp"
-        android:textColor="?android:attr/textColorPrimary"
-        android:textSize="25sp"
+        android:layout_centerHorizontal="true"
+        android:textColor="?attr/colorAccent"
+        android:textSize="@dimen/text_bigest"
         android:id="@+id/group3"
         android:background="@android:color/transparent"/>
+    </RelativeLayout>
 
 </LinearLayout>
