--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -1,129 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimary">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?attr/colorPrimary"
+    app:blurOverlayColor="@color/colorAccent"
+    android:id="@+id/root"
+    android:orientation="vertical">
 
-    <include layout="@layout/toolbar"
-        android:id="@+id/tools"/>
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="vertical">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tools">
+               <include layout="@layout/toolbar"
+                   android:id="@+id/tools"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+               <ScrollView
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@id/tools">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/Theme_swicher"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true">
+                   <LinearLayout
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_drawing"
-                    android:id="@+id/theme_icon"
-                    android:clickable="false"
-                    android:layout_marginLeft="16dp"
-                    android:layout_centerVertical="true"/>
+                       <RelativeLayout
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:orientation="vertical"
+                           android:id="@+id/Theme_swicher"
+                           android:background="?attr/selectableItemBackground"
+                           android:clickable="true"
+                           android:focusable="true">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="56dp"
-                    android:layout_alignLeft="@+id/theme_icon"
-                    android:text="Выбор темы"
-                    android:textSize="@dimen/text_big"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:id="@+id/theme_text"/>
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_drawing"
+                               android:id="@+id/theme_icon"
+                               android:clickable="false"
+                               android:layout_marginLeft="16dp"
+                               android:layout_centerVertical="true"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="56dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_alignLeft="@+id/theme_icon"
-                    android:textSize="@dimen/text_big"
-                    android:text="Текущая тема: "
-                    android:id="@+id/current_theme"
-                    android:textColor="?android:attr/textColorSecondary"
-                    android:layout_below="@+id/theme_text"/>
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginTop="10dp"
+                               android:layout_marginLeft="56dp"
+                               android:layout_alignLeft="@+id/theme_icon"
+                               android:text="Выбор темы"
+                               android:textSize="@dimen/text_big"
+                               android:textColor="?android:attr/textColorPrimary"
+                               android:id="@+id/theme_text"/>
 
-            </RelativeLayout>
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="56dp"
+                               android:layout_marginBottom="10dp"
+                               android:layout_alignLeft="@+id/theme_icon"
+                               android:textSize="@dimen/text_big"
+                               android:text="Текущая тема: "
+                               android:id="@+id/current_theme"
+                               android:textColor="?android:attr/textColorSecondary"
+                               android:layout_below="@+id/theme_text"/>
 
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="?android:attr/listDivider"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"/>
+                       </RelativeLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/info"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true">
+                       <View
+                           android:layout_width="fill_parent"
+                           android:layout_height="1dp"
+                           android:background="?android:attr/listDivider"
+                           android:layout_marginLeft="10dp"
+                           android:layout_marginRight="10dp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_information"
-                    android:id="@+id/info_icon"
-                    android:clickable="false"
-                    android:layout_marginLeft="16dp"
-                    android:layout_centerVertical="true"/>
+                       <RelativeLayout
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:orientation="vertical"
+                           android:id="@+id/premium"
+                           android:background="?attr/selectableItemBackground"
+                           android:clickable="true"
+                           android:focusable="true">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="56dp"
-                    android:layout_alignLeft="@+id/info_icon"
-                    android:text="О приложении"
-                    android:textSize="@dimen/text_big"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:id="@+id/info_text"/>
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_money"
+                               android:id="@+id/premium_icon"
+                               android:clickable="false"
+                               android:layout_marginLeft="16dp"
+                               android:layout_centerVertical="true"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="56dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_alignLeft="@+id/info_icon"
-                    android:text="123"
-                    android:textSize="@dimen/text_big"
-                    android:id="@+id/info_sub"
-                    android:textColor="?android:attr/textColorSecondary"
-                    android:layout_below="@+id/info_text"/>
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginTop="10dp"
+                               android:layout_marginLeft="56dp"
+                               android:layout_alignLeft="@+id/premium_icon"
+                               android:text="Премиум"
+                               android:textSize="@dimen/text_big"
+                               android:textColor="?android:attr/textColorPrimary"
+                               android:id="@+id/premium_text"/>
 
-            </RelativeLayout>
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="56dp"
+                               android:layout_marginBottom="10dp"
+                               android:layout_alignLeft="@+id/premium_icon"
+                               android:text="false"
+                               android:textSize="@dimen/text_big"
+                               android:id="@+id/premium_subtext"
+                               android:textColor="?android:attr/textColorSecondary"
+                               android:layout_below="@+id/premium_text"/>
 
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="?android:attr/listDivider"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"/>
+                       </RelativeLayout>
 
-
-        </LinearLayout>
-
-
+                       <View
+                           android:layout_width="fill_parent"
+                           android:layout_height="1dp"
+                           android:background="?android:attr/listDivider"
+                           android:layout_marginLeft="10dp"
+                           android:layout_marginRight="10dp"/>
 
 
-    </ScrollView>
+                       <RelativeLayout
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:orientation="vertical"
+                           android:id="@+id/info"
+                           android:background="?attr/selectableItemBackground"
+                           android:clickable="true"
+                           android:focusable="true">
 
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_information"
+                               android:id="@+id/info_icon"
+                               android:clickable="false"
+                               android:layout_marginLeft="16dp"
+                               android:layout_centerVertical="true"/>
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginTop="10dp"
+                               android:layout_marginLeft="56dp"
+                               android:layout_alignLeft="@+id/info_icon"
+                               android:text="О приложении"
+                               android:textSize="@dimen/text_big"
+                               android:textColor="?android:attr/textColorPrimary"
+                               android:id="@+id/info_text"/>
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="56dp"
+                               android:layout_marginBottom="10dp"
+                               android:layout_alignLeft="@+id/info_icon"
+                               android:text="123"
+                               android:textSize="@dimen/text_big"
+                               android:id="@+id/info_sub"
+                               android:textColor="?android:attr/textColorSecondary"
+                               android:layout_below="@+id/info_text"/>
+
+                       </RelativeLayout>
+
+                       <View
+                           android:layout_width="fill_parent"
+                           android:layout_height="1dp"
+                           android:background="?android:attr/listDivider"
+                           android:layout_marginLeft="10dp"
+                           android:layout_marginRight="10dp"/>
+
+
+                   </LinearLayout>
+
+
+
+
+               </ScrollView>
+
+
+           </LinearLayout>
 
 </RelativeLayout>
