--- a/app/src/main/res/values-xhdpi/dimens.xml
+++ b/app/src/main/res/values-xhdpi/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="text">12sp</dimen>
     <dimen name="text_small">10sp</dimen>
     <dimen name="text_big">14sp</dimen>
+    <dimen name="text_bigest">16sp</dimen>
 
     <dimen name="icon_note">24dp</dimen>
     <dimen name="icon_setting">36dp</dimen>
