--- a/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="text">16sp</dimen>
     <dimen name="text_small">14sp</dimen>
     <dimen name="text_big">18sp</dimen>
+    <dimen name="text_bigest">20sp</dimen>
 
     <dimen name="icon_note">24dp</dimen>
     <dimen name="icon_setting">36dp</dimen>
