--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -26,11 +26,12 @@
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
 
+
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
-                           android:id="@+id/Theme_swicher"
+                           android:id="@+id/start_page"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">
@@ -38,8 +39,8 @@
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
-                               android:src="@drawable/ic_drawing"
-                               android:id="@+id/theme_icon"
+                               android:src="@drawable/ic_residential"
+                               android:id="@+id/start_page_icon"
                                android:clickable="false"
                                android:layout_marginLeft="16dp"
                                android:layout_centerVertical="true"/>
@@ -49,25 +50,26 @@
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginLeft="56dp"
-                               android:layout_alignLeft="@+id/theme_icon"
-                               android:text="Выбор темы"
+                               android:layout_alignLeft="@+id/start_page_icon"
+                               android:text="Раздел по умолчанию"
                                android:textSize="@dimen/text_big"
                                android:textColor="?android:attr/textColorPrimary"
-                               android:id="@+id/theme_text"/>
+                               android:id="@+id/start_page_text"/>
 
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="56dp"
                                android:layout_marginBottom="10dp"
-                               android:layout_alignLeft="@+id/theme_icon"
-                               android:textSize="@dimen/text_big"
-                               android:text="Текущая тема: "
-                               android:id="@+id/current_theme"
+                               android:layout_alignLeft="@+id/start_page_icon"
+                               android:text="585"
+                               android:textSize="@dimen/text"
+                               android:id="@+id/start_page_subtext"
                                android:textColor="?android:attr/textColorSecondary"
-                               android:layout_below="@+id/theme_text"/>
+                               android:layout_below="@+id/start_page_text"/>
 
                        </RelativeLayout>
+
 
                        <View
                            android:layout_width="fill_parent"
@@ -112,7 +114,7 @@
                                android:layout_marginBottom="10dp"
                                android:layout_alignLeft="@+id/premium_icon"
                                android:text="false"
-                               android:textSize="@dimen/text_big"
+                               android:textSize="@dimen/text"
                                android:id="@+id/premium_subtext"
                                android:textColor="?android:attr/textColorSecondary"
                                android:layout_below="@+id/premium_text"/>
@@ -126,6 +128,56 @@
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"/>
 
+                       <RelativeLayout
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:orientation="vertical"
+                           android:id="@+id/Theme_swicher"
+                           android:background="?attr/selectableItemBackground"
+                           android:clickable="true"
+                           android:focusable="true">
+
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_drawing"
+                               android:id="@+id/theme_icon"
+                               android:clickable="false"
+                               android:layout_marginLeft="16dp"
+                               android:layout_centerVertical="true"/>
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginTop="10dp"
+                               android:layout_marginLeft="56dp"
+                               android:layout_alignLeft="@+id/theme_icon"
+                               android:text="Выбор темы"
+                               android:textSize="@dimen/text_big"
+                               android:textColor="?android:attr/textColorPrimary"
+                               android:id="@+id/theme_text"/>
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginLeft="56dp"
+                               android:layout_marginBottom="10dp"
+                               android:layout_alignLeft="@+id/theme_icon"
+                               android:textSize="@dimen/text"
+                               android:text="Текущая тема: "
+                               android:id="@+id/current_theme"
+                               android:textColor="?android:attr/textColorSecondary"
+                               android:layout_below="@+id/theme_text"/>
+
+                       </RelativeLayout>
+
+
+                       <View
+                           android:layout_width="fill_parent"
+                           android:layout_height="1dp"
+                           android:background="?android:attr/listDivider"
+                           android:layout_marginLeft="10dp"
+                           android:layout_marginRight="10dp"/>
 
                        <RelativeLayout
                            android:layout_width="match_parent"
@@ -163,7 +215,7 @@
                                android:layout_marginBottom="10dp"
                                android:layout_alignLeft="@+id/info_icon"
                                android:text="123"
-                               android:textSize="@dimen/text_big"
+                               android:textSize="@dimen/text"
                                android:id="@+id/info_sub"
                                android:textColor="?android:attr/textColorSecondary"
                                android:layout_below="@+id/info_text"/>
