--- a/app/src/main/res/layout/auth.xml
+++ b/app/src/main/res/layout/auth.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/card_white"
         android:padding="9dp"
-        android:src="@drawable/ic_book_144dp"
+        android:src="@mipmap/ic_icon_app_new_foreground"
         android:layout_marginTop="170dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/book_logo"/>
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Расписание АГУ"
+        android:text="@string/app_name"
         android:textColor="@color/primaryText_light"
         android:textSize="40sp"
         android:id="@+id/text_logo"
@@ -34,10 +34,10 @@
         android:layout_below="@id/text_logo"
         />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/sign_in_button"
-        android:id="@+id/go"/>
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/sign_in_button"-->
+<!--        android:id="@+id/go"/>-->
 
 </RelativeLayout>
