--- a/app/src/main/res/layout/dialog_note.xml
+++ b/app/src/main/res/layout/dialog_note.xml
@@ -8,8 +8,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:background="@drawable/card"
-        android:padding="14dp"
-        android:layout_marginLeft="70dp">
+        android:paddingTop="14dp"
+        android:paddingBottom="14dp"
+        android:layout_marginLeft="16dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -17,7 +18,7 @@
             android:text="Выберите тему"
             android:textColor="?android:attr/textColorPrimary"
             android:textStyle="bold"
-            android:textSize="@dimen/text_big"
+            android:textSize="@dimen/text_bigest"
             android:id="@+id/note_subtext"
             android:layout_centerHorizontal="true"
             />
