--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,12 @@
     <color name="primaryText_light">#DE000000</color>
     <color name="secondaryText_light">#8A000000</color>
 
+    <color name="card_day">#0F5E47FF</color>
+    <color name="card_night">#0F1DB954</color>
+
     <color name="colorPrimary">#212121</color>
     <color name="colorPrimaryDark">#212121</color>
-    <color name="colorAccent">#59FC6F</color>
+    <color name="colorAccent">#1DB954</color>
     <color name="primaryText">#FFFFFF</color>
     <color name="secondaryText">#B3FFFFFF</color>
 
