--- a/app/src/main/res/layout/donate.xml
+++ b/app/src/main/res/layout/donate.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@drawable/card_premium"
+        android:background="@drawable/card"
         android:padding="14dp">
 
         <TextView
@@ -15,10 +15,10 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:id="@+id/info_card"
-            android:text="Премиум"
+            android:text="Помочь разработчику"
             android:textSize="@dimen/icon_note"
             android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/primaryText"
             android:layout_marginBottom="10dp"/>
 
         <LinearLayout
@@ -31,87 +31,32 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Цена премиум доступа"
+                android:text="Ниже вы можете выбрать сумму, которой готовы поделиться с автором данного приложения"
                 android:textSize="@dimen/text_bigest"
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"
-                android:textColor="@color/colorPrimary"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="50 рублей"
-                android:layout_marginTop="10dp"
-                android:textSize="@dimen/text_big"
-                android:textColor="@color/colorPrimary"/>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/secondaryText"
-                android:layout_marginTop="8dp"/>
+                android:textColor="@color/primaryText"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Что даёт премиум"
-                android:textStyle="bold"
-                android:textSize="@dimen/text_bigest"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/colorPrimaryDark"/>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="- Использование заметок"
-                android:textSize="@dimen/text_big"
-                android:background="?attr/selectableItemBackground"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/colorPrimary"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="- Отключение рекламы"
-                android:textSize="@dimen/text_big"
-                android:background="?attr/selectableItemBackground"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/colorPrimary"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="- Разработчик покушает"
-                android:textSize="@dimen/text_big"
-                android:background="?attr/selectableItemBackground"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/colorPrimary"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Данный список будет пополняться"
-                android:textSize="@dimen/text_big"
-                android:background="?attr/selectableItemBackground"
-                android:layout_marginTop="10dp"
+                android:text="оплата производится с помощью Google Play"
+                android:textSize="@dimen/text"
                 android:textColor="@color/secondaryText"/>
-
-
 
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:background="@color/secondaryText"
                 android:layout_marginTop="8dp"/>
-
 
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/vk"
+                android:id="@+id/one"
+                android:paddingVertical="10dp"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
@@ -122,21 +67,77 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Купить"
+                    android:text="1$"
                     android:textStyle="bold"
                     android:textSize="@dimen/text_bigest"
-                    android:textColor="@color/colorPrimary"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="оплата производится с помощью Google Play"
-                    android:textSize="@dimen/text"
-                    android:textColor="@color/secondaryText"/>
+                    android:textColor="@color/primaryText"/>
 
             </LinearLayout>
 
 
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@color/secondaryText"/>
+
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/two"
+                android:paddingVertical="10dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="16dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="2$"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/text_bigest"
+                    android:textColor="@color/primaryText"/>
+
+            </LinearLayout>
+
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@color/secondaryText"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/three"
+                android:paddingVertical="10dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="16dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="3$"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/text_bigest"
+                    android:textColor="@color/primaryText"/>
+
+            </LinearLayout>
+
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@color/secondaryText"/>
 
 
 
