--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -24,108 +24,6 @@
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
 
-
-                       <RelativeLayout
-                           android:layout_width="match_parent"
-                           android:layout_height="wrap_content"
-                           android:orientation="vertical"
-                           android:id="@+id/start_page"
-                           android:background="?attr/selectableItemBackground"
-                           android:clickable="true"
-                           android:focusable="true">
-
-                           <ImageView
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:src="@drawable/ic_residential"
-                               android:id="@+id/start_page_icon"
-                               android:clickable="false"
-                               android:layout_marginLeft="16dp"
-                               android:layout_centerVertical="true"/>
-
-                           <TextView
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginTop="10dp"
-                               android:layout_marginLeft="56dp"
-                               android:layout_alignLeft="@+id/start_page_icon"
-                               android:text="Раздел по умолчанию"
-                               android:textSize="@dimen/text_big"
-                               android:textColor="@color/primaryText"
-                               android:id="@+id/start_page_text"/>
-
-                           <TextView
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginLeft="56dp"
-                               android:layout_marginBottom="10dp"
-                               android:layout_alignLeft="@+id/start_page_icon"
-                               android:text="585"
-                               android:textSize="@dimen/text"
-                               android:id="@+id/start_page_subtext"
-                               android:textColor="@color/secondaryText"
-                               android:layout_below="@+id/start_page_text"/>
-
-                       </RelativeLayout>
-
-
-                       <View
-                           android:layout_width="fill_parent"
-                           android:layout_height="1dp"
-                           android:background="?android:attr/listDivider"
-                           android:layout_marginLeft="10dp"
-                           android:layout_marginRight="10dp"/>
-
-                       <RelativeLayout
-                           android:layout_width="match_parent"
-                           android:layout_height="wrap_content"
-                           android:orientation="vertical"
-                           android:id="@+id/premium"
-                           android:background="?attr/selectableItemBackground"
-                           android:clickable="true"
-                           android:focusable="true">
-
-                           <ImageView
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:src="@drawable/ic_money"
-                               android:id="@+id/premium_icon"
-                               android:clickable="false"
-                               android:layout_marginLeft="16dp"
-                               android:layout_centerVertical="true"/>
-
-                           <TextView
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginTop="10dp"
-                               android:layout_marginLeft="56dp"
-                               android:layout_alignLeft="@+id/premium_icon"
-                               android:text="Премиум"
-                               android:textSize="@dimen/text_big"
-                               android:textColor="@color/primaryText"
-                               android:id="@+id/premium_text"/>
-
-                           <TextView
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:layout_marginLeft="56dp"
-                               android:layout_marginBottom="10dp"
-                               android:layout_alignLeft="@+id/premium_icon"
-                               android:text="false"
-                               android:textSize="@dimen/text"
-                               android:id="@+id/premium_subtext"
-                               android:textColor="@color/secondaryText"
-                               android:layout_below="@+id/premium_text"/>
-
-                       </RelativeLayout>
-
-                       <View
-                           android:layout_width="fill_parent"
-                           android:layout_height="1dp"
-                           android:background="?android:attr/listDivider"
-                           android:layout_marginLeft="10dp"
-                           android:layout_marginRight="10dp"/>
-
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
@@ -166,6 +64,45 @@
                                android:id="@+id/current_theme"
                                android:textColor="@color/secondaryText"
                                android:layout_below="@+id/theme_text"/>
+
+                       </RelativeLayout>
+
+                       <View
+                           android:layout_width="fill_parent"
+                           android:layout_height="1dp"
+                           android:background="?android:attr/listDivider"
+                           android:layout_marginLeft="10dp"
+                           android:layout_marginRight="10dp"/>
+
+                       <RelativeLayout
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:orientation="vertical"
+                           android:id="@+id/premium"
+                           android:paddingVertical="12dp"
+                           android:background="?attr/selectableItemBackground"
+                           android:clickable="true"
+                           android:focusable="true">
+
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_money"
+                               android:id="@+id/premium_icon"
+                               android:clickable="false"
+                               android:layout_marginLeft="16dp"
+                               android:layout_centerVertical="true"/>
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_centerVertical="true"
+                               android:layout_marginLeft="56dp"
+                               android:layout_alignLeft="@+id/premium_icon"
+                               android:text="Поддержать автора"
+                               android:textSize="@dimen/text_big"
+                               android:textColor="@color/primaryText"
+                               android:id="@+id/premium_text"/>
 
                        </RelativeLayout>
 
