--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
         <color name="line">#e0e0e0</color>
         <color name="line_table">#CFCFCF</color>
 
-        <color name="day">#ffd7ef87</color>
+        <color name="day">#4AAAF8</color>
 
         <color name="search">#DFDFDF</color>
 
